PFC-2314 #comment cleanups